[package]
name = "another_radix_trie"
version = "0.1.4"
authors = ["Yaxin Cheng <yaxin.cheng@dal.ca>"]
edition = "2018"
license = "MIT"
description = "Rust built radix tree library"
homepage = "https://github.com/YaxinCheng/RadixTree"
repository = "https://github.com/YaxinCheng/RadixTree"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
